--- a/public/main.css
+++ b/public/main.css
@@ -9,6 +9,28 @@ body {
     background-color: #f0f0f0;
 }
 
+div#content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    padding: 1em;
+}
+
+div#color {
+    width: 50px;
+    height: 50px;
+    border: 2px solid black;
+    background-color: white;
+    margin: 1em;
+}
+
 canvas {
     border: 2px solid black;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
